Fix horizontal scroll main layout part 2 + z-index issue

--- a/content/scss/_c-navbar.scss
+++ b/content/scss/_c-navbar.scss
@@ -54,7 +54,6 @@
   overflow-y: hidden;
   display: flex;
   z-index: 61;
-  position: relative;
 
   .c-toolbar__left,
   .c-toolbar__right {
